# notion-to-email

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: run.yml
src/: lib.rs  main.rs  utils.rs
src/client/: body.rs  mod.rs  notion_client.rs
src/client/database/: database_endpoint.rs  mod.rs  model.rs
src/client/page/: mod.rs  page_endpoint.rs
src/email/: send_email.rs
src/scraper/: utils.rs
