[package]
name = "notion-to-email"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
article_scraper = "2.1.0"
dotenv = "0.15.0"
lettre = "0.11.11"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
